ZSUI-877: Fixing grid level and cell level alignments

--- a/demo.css
+++ b/demo.css
@@ -52,7 +52,7 @@
 #menu-bar .handle{
 	background-color: #2E2E2E;
 	left: -40px;
-	padding: 10px; 8px;
+	padding: 10px;
 	position: absolute;
 	top: 0px;
 	width: 20px;
